--- a/app/assets/stylesheets/global/fonts.css.scss
+++ b/app/assets/stylesheets/global/fonts.css.scss
@@ -38,3 +38,5 @@
 }
 
 @import url(http://fonts.googleapis.com/css?family=ABeeZee);
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,300,400italic,700);
+@import url(http://fonts.googleapis.com/css?family=Roboto+Slab:400,700);
