--- a/app/assets/stylesheets/spree/frontend/_variables.scss
+++ b/app/assets/stylesheets/spree/frontend/_variables.scss
@@ -4,6 +4,8 @@
 $c_green:       #8dba53 !default;  /* Spree green    */
 $c_red:         #e45353 !default;  /* Error red      */
 
+$leema_blue:                #3a89ff !default;
+
 $layout_background_color:   #FFFFFF !default;
 $title_text_color:          #404042 !default;
 $body_text_color:           #404042 !default;
