--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -32,6 +32,7 @@
 @font-family-serif: 'Roboto Slab', serif;
 @font-family-sans-serif: 'Roboto', sans-serif;
 
+
 h1, h2, h3, h4, h5, h6 {
 	font-family: @font-family-serif;
 }
@@ -281,3 +282,48 @@ a:hover {
 #product-images #main-image {
 	border: none;
 }
+
+/* Footer */
+footer {
+	background: darken(@body-bg, 15%);
+
+	.top {
+		padding: 20px 0;
+		background: darken(@body-bg, 5%);
+		border-top: 1px solid #C5C5C5;
+	}
+
+	.bottom {
+		padding: 15px 0 10px;
+		background: darken(@body-bg, 15%);	
+	}
+
+	p {
+		font-size: 14px !important;
+	}
+}
+
+footer ul.social {
+	margin-bottom: 0px;
+}
+
+footer ul.social li a {
+	display: block;
+	float: left;
+	font-size: 24px;
+	width: 50px;
+	height: 50px;
+	padding: 5px;
+	border: 3px solid #212121;
+	-moz-border-radius: 50px;
+	-webkit-border-radius: 50px;
+	border-radius: 50px;
+	text-align: center;
+	margin-top: 0;
+	margin-right: 0;
+	margin-left: 13px;
+}
+
+footer ul.social li a:hover {
+	border: 3px solid @brand-primary;
+}	
