--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -90,7 +90,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 text-center">
-				<h2>This is a text break block</h2>
+				<h2>Exceptional Creations</h2>
 				<p>Semiotics messenger bag bespoke, Williamsburg gluten-free Etsy hashtag pork belly pop-up salvia umami post-ironic letterpress. Four dollar toast raw denim mlkshk Intelligentsia lomo before they sold out small batch. Locavore Thundercats cliche deep v put a bird on it raw denim. Fixie listicle Williamsburg lomo mustache, Banksy Thundercats 3 wolf moon hella Neutra disrupt cronut. Kogi mixtape McSweeney's, Pitchfork tote bag authentic meditation wayfarers street art fingerstache typewriter Thundercats polaroid chillwave wolf. Pinterest small batch plaid, polaroid scenester Echo Park letterpress art party yr cronut asymmetrical banh mi pork belly. Farm-to-table freegan polaroid messenger bag American Apparel.</p>
 			</div>
 		</div><!-- close .row -->
