adding footer component

--- a/app/views/spree/layouts/admin.html.erb
+++ b/app/views/spree/layouts/admin.html.erb
@@ -50,6 +50,7 @@
       </div>
     </div>
 
+    <%= render :partial => 'shared/footer' %>
     <div data-hook="admin_footer_scripts"></div>
   </body>
 </html>
