--- a/app/views/spree/layouts/spree_application.html.erb
+++ b/app/views/spree/layouts/spree_application.html.erb
@@ -27,17 +27,9 @@
 
       </div><!-- close .row -->
 
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-12">
-            <footer>
-              <p>&copy; Leema <%= Time.now.year %></p>
-            </footer>
-          </div>
-        </div><!--/row-->
-      </div> <!-- /container -->
-
     </div><!-- close .container -->
+
+    <%= render :partial => 'shared/footer' %>
 
     <%= render :partial => 'spree/shared/google_analytics' %>
   </body>
