--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,9 +3,9 @@
     <div class="container">
       <div class="col-xs-12">
          <ul class="list-inline social text-center">
-          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+          <li><a href="https://www.facebook.com/pages/Leema/1505609129699476" target="_blank"><i class="fa fa-facebook"></i></a></li>
+          <li><a href="http://instagram.com/leemaeats" target="_blank"><i class="fa fa-instagram"></i></a></li>
+          <li><a href="https://twitter.com/leemaeats" target="_blank"><i class="fa fa-twitter"></i></a></li>
         </ul>
       </div><!-- close .col-xs-12 -->
     </div><!-- close .container -->
