--- a/app/views/spree/orders/edit.html.erb
+++ b/app/views/spree/orders/edit.html.erb
@@ -5,8 +5,8 @@
   <% if @order.line_items.empty? %>
 
     <div data-hook="empty_cart">
-      <p><%= Spree.t(:your_cart_is_empty) %></p>
-      <p><%= link_to Spree.t(:continue_shopping), products_path, :class => 'button continue' %></p>
+      <div class="alert alert-info"><%= Spree.t(:your_cart_is_empty) %></div>
+      <p><%= link_to Spree.t(:continue_shopping), products_path, :class => 'btn btn-default' %></p>
     </div>
 
   <% else %>
@@ -18,9 +18,30 @@
           <div data-hook="cart_items">
             <%= render :partial => 'form', :locals => { :order_form => order_form } %>
           </div>
+
           <div class="row">
 
-            <div id="empty-cart" class="col-xs-6" data-hook>
+            <div class="links col-md-6 col-xs-12 pull-right alpha omega" data-hook="cart_buttons">
+                <div class="row">
+                  <div class="col-xs-8">
+                    <div class="input-group">
+                      <%= order_form.text_field :coupon_code, :class => 'form-control', :size => 10, :placeholder => Spree.t(:coupon_code) %>
+                        <span class="input-group-btn">
+                          <%= button_tag  :class => 'btn btn-primary', :id => 'update-button' do %>
+                          <%= Spree.t(:update) %>
+                        </span>
+                      <% end %>
+                    </div>
+                  </div><!-- close col-xs-8 -->
+                  <div class="col-xs-4">
+                    <%= button_tag :class => 'checkout btn btn-success button', :id => 'checkout-link', :name => 'checkout' do %>
+                      <%= Spree.t(:checkout) %>
+                    <% end %>
+                  </div><!-- close .col-xs-4 -->
+              </div><!-- close .row -->
+            </div><!-- close col-xs-6 -->
+    <% end %>
+            <div id="empty-cart" class="col-md-6 col-xs-12 pull-left" data-hook>
               <%= form_tag empty_cart_path, :method => :put do %>
                 <%= submit_tag Spree.t(:empty_cart), :class => 'btn btn-danger' %>
                 <%= Spree.t(:or) %>
@@ -28,33 +49,15 @@
               <% end %>
             </div>
 
-            <div class="links col-xs-6 alpha omega" data-hook="cart_buttons">
-                <div class="row">
-                  <div class="col-xs-8">
-                    <div class="input-group">
-                      <%= order_form.text_field :coupon_code, :class => 'form-control', :size => 10, :placeholder => Spree.t(:coupon_code) %>
-                        <span class="input-group-btn">
-                          <%= button_tag :class => 'btn btn-primary', :id => 'update-button' do %>
-                          <%= Spree.t(:update) %>
-                        </span>
-                      <% end %>
-                    </div>
-                  </div><!-- close col-xs-8 -->
-                  <div class="col-xs-4">
-                    <%= button_tag :class => 'checkout btn btn-success', :id => 'checkout-link', :name => 'checkout' do %>
-                      <%= Spree.t(:checkout) %>
-                    <% end %>
-                  </div><!-- close .col-xs-4 -->
-              </div><!-- close .row -->
-            </div><!-- close col-xs-6 -->
-
           </div><!-- close .row -->
 
         </div>
-      <% end %>
+
     </div>
 
-    
+
 
   <% end %>
 </div>
+
+
