--- a/app/assets/stylesheets/global/fonts.css.scss
+++ b/app/assets/stylesheets/global/fonts.css.scss
@@ -38,5 +38,5 @@
 }
 
 @import url(https://fonts.googleapis.com/css?family=ABeeZee);
-@import url(htts://fonts.googleapis.com/css?family=Roboto:400,300,400italic,700);
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,400italic,700);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,700);
