fixing product grid on homepage

--- a/app/assets/stylesheets/welcome/welcome.css.scss
+++ b/app/assets/stylesheets/welcome/welcome.css.scss
@@ -138,6 +138,9 @@ section {
     }
 }
 
+.welcome-product:nth-of-type(n+4) {
+    margin-top: 30px;
+}
 
 #welcome-product-grid .welcome-product {
     position: relative;
@@ -163,11 +166,12 @@ section {
 #welcome-product-grid .welcome-product .seller-info{
     position: absolute;
     text-align: left;
-    top: 20px;
-    left: 20px;
+    top: 0px;
+    left: 0px;
     z-index: 10;
     opacity: 0;
     color: #333;
+    padding: 10px 20px 0;
 }
 
 #welcome-product-grid .welcome-product .seller-info h3 {
