--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -31,14 +31,16 @@
 <section id="welcome-product-grid">
 	<div class="container"
 		<div class="row">
-			<% @products.first(3).each do |product| %>
-			<div class="col-sm-4 col-xs-6 welcome-product">
+			<% @products.first(6).each do |product| %>
+			<div class="col-sm-4 col-xs-12 welcome-product">
 				<!--TODO: The links to the products are not routing to the /products part of the path where Spree is mounted. I'll have to work on that -->
-				<%= link_to image_tag(product.images.first.attachment.url(:large)), controller: 'products', action: 'index', id: product %>
+				<%= link_to product, :class => 'product-link', :itemprop => "name", :title => product.name do %>
+				<%= image_tag product.images.first.attachment.url(:large), :class => 'img-responsive center-block' %>
 				<div class="seller-info">
 					<h3 class="seller-name"><%= product.name %></h3>
 					<p class="product-descr"><%= product.description %></p>
 				</div>
+				<% end %>
 			</div>
 			<% end %>
 		</div>
