--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -88,7 +88,7 @@
 	</div>
 </section>
 
-<section id="text-break">
+<section class="text-break">
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 text-center">
@@ -97,6 +97,10 @@
 			</div>
 		</div><!-- close .row -->
 	</div><!-- close .container -->
+</section>
+
+<section id="reindeer" class="image-break">
+
 </section>
 
 <section id="get-started">
