--- a/app/assets/stylesheets/welcome/welcome.css.scss
+++ b/app/assets/stylesheets/welcome/welcome.css.scss
@@ -242,6 +242,9 @@ section {
 
 #reindeer {
     background: image-url("pretzel-reindeer.jpg");
-    background-size: cover;
-    background-position: center center;
+/*     background-size: cover;
+ */    background-attachment: fixed;
+    background-position:0 0;
+    background-repeat: no-repeat;
+    position: relative;
 }
