--- a/app/assets/stylesheets/welcome/welcome.css.scss
+++ b/app/assets/stylesheets/welcome/welcome.css.scss
@@ -242,8 +242,7 @@ section {
 
 #reindeer {
     background: image-url("pretzel-reindeer.jpg");
-/*     background-size: cover;
- */    background-attachment: fixed;
+    background-attachment: fixed;
     background-position:0 0;
     background-repeat: no-repeat;
     position: relative;
