updating search bar styles

--- a/app/assets/stylesheets/welcome/welcome.css.scss
+++ b/app/assets/stylesheets/welcome/welcome.css.scss
@@ -32,37 +32,39 @@
 
 
 .input-group .form-control.main-search {
-    background: none !important;
+    background: rgba(255,255,255,.7) !important;
     border-color: rgba(58, 137, 255, 1);
-    border-style: none none solid none;
+    border-style: none none solid solid;
     border-width: 3px;
     border-radius: 0;
     outline: none;
     color: #1a1a1a;
-    padding: 15px 0 0 0;
     box-shadow: none;
     font-weight: 500;
 }
 
 /* Placeholder text color for browsers */
 .input-group .form-control.main-search::-webkit-input-placeholder {
-    color:#666;
+    color:#888;
 }
 .input-group .form-control.main-search:-moz-placeholder {
-    color:#666;
+    color:#888;
     opacity: 1;
 }
 .input-group .form-control.main-search::-moz-placeholder {
-    color:#666;
+    color:#888;
     opacity: 1;
 }
 .input-group .form-control.main-search::-ms-input-placeholder {
-    color:#666;
+    color:#888;
 }
 
 .search-leema .btn {
     border-radius: 0px;
     padding: 10px;
+    border-color: rgba(58, 137, 255, 1);
+    border-style: none none solid none;
+    border-width: 3px;
 }
 
 section {
@@ -84,7 +86,7 @@ section {
         height: 110px;
         line-height: 90px;
         margin:0px;
-        padding-top: 25px;
+        padding: 20px;
     }
 
     .search-leema .btn {
@@ -118,7 +120,7 @@ section {
         height: 90px;
         line-height: 70px;
         margin:0px;
-        padding-top: 25px;
+        padding: 20px;
     }
 
     .search-leema .btn {
