search style updates

--- a/app/assets/stylesheets/welcome/welcome.css.scss
+++ b/app/assets/stylesheets/welcome/welcome.css.scss
@@ -87,12 +87,14 @@ section {
         line-height: 90px;
         margin:0px;
         padding: 20px;
+        border-width: 10px;
     }
 
     .search-leema .btn {
         border-radius: 0px;
         height: 110px;
         padding: 10px 30px;
+        border-width: 10px;
     }
 
     section {
@@ -121,12 +123,14 @@ section {
         line-height: 70px;
         margin:0px;
         padding: 20px;
+        border-width: 6px;
     }
 
     .search-leema .btn {
         border-radius: 0px;
         height: 90px;
         padding: 10px 20px;
+        border-width: 6px;
     }
     #welcome {
         padding: 60px 0;
