adding marketing copy

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -68,35 +68,35 @@
 		<div class="row">
 			<div class="col-sm-4">
 				<i class="fa fa-recycle"></i>
-				<h4>Organic Ingredients</h4>
-				<p>Alcatra kielbasa short loin venison. Pork belly andouille leberkas tenderloin. Sausage shoulder tri-tip meatloaf, pork loin swine turkey ground round shankle turducken. Sausage shankle turducken t-bone prosciutto.</p>
+				<h4>Your Own Store</h4>
+				<p>Ever dream about having your own store? Now you've got one! Leema gives you the ability to build a fully customizable online storefront that will allow you to promote your brand. With just a few clicks, your store will be open for business!</p>
 			</div>
 			<div class="col-sm-4">
 				<i class="fa fa-cutlery"></i>
-				<h4>Fresh Food</h4>
-				<p>Alcatra kielbasa short loin venison. Pork belly andouille leberkas tenderloin. Sausage shoulder tri-tip meatloaf, pork loin swine turkey ground round shankle turducken. Sausage shankle turducken t-bone prosciutto.</p>
+				<h4>Out of the Box</h4>
+				<p>Leema gives you a robust marketing, ecommerce, and selling platform. Get back to what you really love to do, let us take care of the rest. Don't you wish everything was this simple?</p>
 			</div>
 			<div class="col-sm-4">
 				<i class="fa fa-heart"></i>
 				<h4>Made With Love</h4>
-				<p>Alcatra kielbasa short loin venison. Pork belly andouille leberkas tenderloin. Sausage shoulder tri-tip meatloaf, pork loin swine turkey ground round shankle turducken. Sausage shankle turducken t-bone prosciutto.</p>
+				<p>Every product that our merchants create is painstakingly prepared to be of the highest quality. Putting their heart and souls into creating the best, you can feel confident that you are receiving a truly exceptional creation.</p>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-sm-4">
 				<i class="fa fa-truck"></i>
 				<p>Delivery</p>
-				<p>Alcatra kielbasa short loin venison. Pork belly andouille leberkas tenderloin. Sausage shoulder tri-tip meatloaf, pork loin swine turkey ground round shankle turducken. Sausage shankle turducken t-bone prosciutto.</p>
+				<p>Whether you're 2 miles or 200 miles away, our network of local and national delivery services will ensure that you will always receive your product fresh and undamaged. By partnering with Postmates and EasyPost you can be sure that your order will be cared for as if it were their own child.</p>
 			</div>
 			<div class="col-sm-4">
 				<i class="fa fa-users"></i>
-				<h4>Build a Community</h4>
-				<p>Alcatra kielbasa short loin venison. Pork belly andouille leberkas tenderloin. Sausage shoulder tri-tip meatloaf, pork loin swine turkey ground round shankle turducken. Sausage shankle turducken t-bone prosciutto.</p>
+				<h4>Join the Community</h4>
+				<p>From watching the big game around a plate of wings to discussing your day at the dinner table, communities have always formed around food. Leema's community revolves around the creations that are bought and sold, allowing creators to share stories, recipes, secrets, and ideas. This is a community that truly sees food for what it is, an expression of the person who created it.</p>
 			</div>
 			<div class="col-sm-4">
 				<i class="fa fa-shield"></i>
 				<h4>Secure Checkout</h4>
-				<p>Alcatra kielbasa short loin venison. Pork belly andouille leberkas tenderloin. Sausage shoulder tri-tip meatloaf, pork loin swine turkey ground round shankle turducken. Sausage shankle turducken t-bone prosciutto.</p>
+				<p>Using (some payment) to process all transactions, we give you the peace of mind of knowing that your information is safe every time you make a purchase or sell a product. Whether you use a credit card, debit card, check, doubloons, sheckles, or shillings, your information is safe and secure.</p>
 				<p>
 			</div>
 		</div>
