--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -85,7 +85,7 @@
 		<div class="row">
 			<div class="col-sm-4">
 				<i class="fa fa-truck"></i>
-				<p>Delivery</p>
+				<h4>Delivery</h4>
 				<p>Whether you're 2 miles or 200 miles away, our network of local and national delivery services will ensure that you will always receive your product fresh and undamaged. By partnering with Postmates and EasyPost you can be sure that your order will be cared for as if it were their own child.</p>
 			</div>
 			<div class="col-sm-4">
