editing structure of review submission form

--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -110,6 +110,10 @@ a:hover {
 	margin-right: 3px;
 }
 
+.text-area {
+	max-width: 100%;
+}
+
 @media only screen and (max-width: 767px){
 	.container {
 		width: 100%;
