--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -56,11 +56,12 @@
         <ul class="nav navbar-nav navbar-right">
           <% if signed_in? %>
             <li>
-                <a href="/<%= current_user.id %>"><%= image_tag current_user.gravatar_url, class: 'gravatar' %> <%= current_user.first_name %></a>
+              <a href="/<%= current_user.id %>"><%= image_tag current_user.gravatar_url, class: 'gravatar' %> <%= current_user.first_name %></a>
               </li>
-            <li><%= link_to "Browse", products_path %></li>
+            <li><%= link_to "Browse", spree_path %></li>
             <li><%= link_to "Log Out", logout_path %></li>
           <% else %>
+            <li><%= link_to "Browse", spree_path %></li>
             <li><%= link_to "Log In", signin_path %></li>
             <li><%= link_to "Register", register_path %></li>
           <% end %>
