--- a/app/views/layouts/interior.html.erb
+++ b/app/views/layouts/interior.html.erb
@@ -56,7 +56,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <% if signed_in? %>
-          <li><%= link_to "Browse", products_path %></li>
+          <li><%= link_to "Browse", spree_path %></li>
           <li><%= link_to "Log Out", logout_path %></li>
         <% else %>
           <li><%= link_to "Log In", signin_path %></a></li>
