Connected get started button

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -111,7 +111,7 @@
 		<div class="row">
 			<div class="col-xs-12 text-center">
 				<h2>Start eating today.</h2>
-				<a href="#" class="btn btn-primary">Get Started</a>
+				<%= link_to "Get Started", spree_path, class: "btn btn-primary" %>
 			</div>
 		</div><!-- close .row -->
 	</div><!-- close .container -->
