--- a/app/views/spree/orders/_form.html.erb
+++ b/app/views/spree/orders/_form.html.erb
@@ -1,18 +1,18 @@
 <%= render :partial => 'spree/shared/error_messages', :locals => { :target => @order } %>
- <div class="table_container"> 
-    <table class="responsive" id="cart-detail" data-hook>
+ <div class="table-responsive">
+    <table class="table" id="cart-detail" data-hook>
       <thead>
         <tr data-hook="cart_items_headers">
-          <th class="cart-item-description-header" colspan="2"><%= Spree.t(:item) %></th>
+          <th class="cart-item-header"><%= Spree.t(:item) %></th>
+          <th class="cart-item-description-header"><%= Spree.t(:description) %></th>
           <th class="cart-item-price-header"><%= Spree.t(:price) %></th>
           <th class="cart-item-quantity-header"><%= Spree.t(:qty) %></th>
-          <th class="cart-item-total-header"><%= Spree.t(:total) %></th>
+          <th class="cart-item-total-header no-border"><%= Spree.t(:total) %></th>
           <th class="cart-item-delete-header"></th>
         </tr>
       </thead>
       <tbody id="line_items" data-hook>
         <%= render partial: 'line_item', collection: order_form.object.line_items, locals: {order_form: order_form} %>
-      </tbody>
       <% if @order.all_adjustments.exists? %>
         <tr class="cart-subtotal">
           <td colspan="4" align='right'><h5><%= Spree.t(:cart_subtotal, :count => @order.line_items.sum(:quantity)) %></h5></th>
@@ -21,10 +21,14 @@
         </tr>
         <%= render "spree/orders/adjustments" %>
       <% end %>
-      <tr class="cart-total">
-        <td class="lead" colspan="4" align='right'><%= Spree.t(:total) %></th>
-        <td class="lead" colspan><%= order_form.object.display_total %></td>
-        <td></td>
-      </tr>
+     </tbody>
     </table>
   </div><!-- close .table-container -->
+    <table class="table">
+      <tbody>
+        <tr class="cart-total">
+          <td class="lead" align="right"><%= Spree.t(:total) %> <%= order_form.object.display_total %></td>
+        </tr>
+      </tbody>
+    </table>
+
