--- a/app/views/spree/checkout/_address.html.erb
+++ b/app/views/spree/checkout/_address.html.erb
@@ -31,14 +31,16 @@
     </div>
   </div>
 </div>
-
-<div class="well text-right form-buttons" data-hook="buttons">
-  <%= submit_tag Spree.t(:save_and_continue), :class => 'btn btn-lg btn-success' %>
-  <% if try_spree_current_user %>
-    <span data-hook="save_user_address">
-      &nbsp; &nbsp;
-      <%= check_box_tag 'save_user_address', '1', try_spree_current_user.respond_to?(:persist_order_address) %>
-      <%= label_tag :save_user_address, Spree.t(:save_my_address) %>
-    </span>
-  <% end %>
+<div class="row">
+  <div class="col-xs-12">
+    <div class="well text-right form-buttons" data-hook="buttons">
+      <%= submit_tag Spree.t(:save_and_continue), :class => 'btn btn-lg btn-success' %>
+      <% if try_spree_current_user %>
+        <div class="checkbox" data-hook="save_user_address">
+          <%= check_box_tag 'save_user_address', '1', try_spree_current_user.respond_to?(:persist_order_address) %>
+          <%= label_tag :save_user_address, Spree.t(:save_my_address) %>
+        </div>
+      <% end %>
+    </div>
+  </div>
 </div>
