--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -87,6 +87,14 @@ a:hover {
 	}
 }
 
+label {
+	margin-bottom: 0px;
+}
+
+input[type="radio"], input[type="checkbox"]{
+	margin: 0px;
+}
+
 .btn, a.button {
 	border:	none;
 }
