Fixed product thumbnail links

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -33,10 +33,8 @@
 		<div class="row">
 			<% @products.first(6).each do |product| %>
 			<div class="col-sm-4 col-xs-12 welcome-product">
-				<!--TODO: The links to the products are not routing to the /products part of the path where Spree is mounted. I'll have to work on that
-				# <%= link_to product, :class => 'product-link', :itemprop => "name", :title => product.name do %>
-				# <%= image_tag product.images.first.attachment.url(:large), :class => 'img-responsive center-block' %>-->
-				<%= link_to image_tag(product.images.first.attachment.url(:large)), controller: 'products', action: 'index',:class => 'img-responsive center-block', id: product %>
+				<%= link_to 'store/products/' + product.id.to_s, :class => 'product-link', :itemprop => "name", :title => product.name do %>
+				<%= image_tag product.images.first.attachment.url(:large), :class => 'img-responsive center-block' %>
 
 				<div class="seller-info">
 					<h3 class="seller-name"><%= product.name %></h3>
