--- a/app/assets/javascripts/spree/backend/admin.js.erb
+++ b/app/assets/javascripts/spree/backend/admin.js.erb
@@ -21,9 +21,8 @@ jQuery(function($) {
   <% # Re-adjusting admin menu during test causes tests to fail,
      # like states_spec and shipping_methods_spec. Let's not do this. %>
   <% unless Rails.env.test? %>
-    $('.main-menu-wrapper ul').AdaptiveMenu({
-      text: "<a href='#' class='fa'><i class='fa fa-chevron-down'></i> " + Spree.translations.more + "</a>",
-      klass: "dropdown"
+    $(".flexnav").flexNav({
+      'calcItemWidths':   true,
     });
   <% end %>
 
