--- a/app/views/spree/admin/shared/_menu.html.erb
+++ b/app/views/spree/admin/shared/_menu.html.erb
@@ -1,8 +1,7 @@
-<nav id="admin-menu" data-hook>
-    <div class="main-menu-wrapper clearfix">
-      <ul data-hook="admin_tabs" class="fullwidth-menu">
-        <%= render :partial => 'spree/admin/shared/tabs' %>
-      </ul>
-    </div>
+<div class="menu-button">Menu</div>
+<nav data-hook class="clearfix">
+  <ul data-hook="admin_tabs" class="flexnav" data-breakpoint="934">
+    <%= render :partial => 'spree/admin/shared/tabs' %>
+  </ul>
 </nav>
 
