fixing checkout adjustment row

--- a/app/views/spree/orders/_adjustments.html.erb
+++ b/app/views/spree/orders/_adjustments.html.erb
@@ -16,7 +16,7 @@
 
   <% @order.shipments.each do |shipment| %>
     <tr>
-      <td colspan="6" align='right'><h5><%= Spree.t(:shipping) %>: <%= shipment.shipping_method.name %>: <strong><%= shipment.display_discounted_cost %></strong></h5>
+      <td colspan="6" align='right'><h5><%= Spree.t(:shipping) %>:&nbsp;&nbsp;&nbsp;<%= shipment.shipping_method.name %>: <strong><%= shipment.display_discounted_cost %></strong></h5>
       </td>
     </tr>
   <% end %>
