--- a/app/views/spree/orders/_form.html.erb
+++ b/app/views/spree/orders/_form.html.erb
@@ -20,7 +20,7 @@
       <tbody>
          <% if @order.all_adjustments.exists? %>
           <tr class="cart-subtotal">
-            <td colspan="6" align='right'><h5><%= Spree.t(:cart_subtotal, :count => @order.line_items.sum(:quantity)) %>: <strong><%= order_form.object.display_item_total %></strong></h5></td>
+            <td colspan="6" align='right'><h5><%= Spree.t(:cart_subtotal, :count => @order.line_items.sum(:quantity)) %>:&nbsp;&nbsp;&nbsp;<strong><%= order_form.object.display_item_total %></strong></h5></td>
           </tr>
           <%= render "spree/orders/adjustments" %>
         <% end %>
@@ -29,7 +29,7 @@
     <table class="table">
       <tbody>
         <tr class="cart-total">
-          <td class="lead" align="right"><%= Spree.t(:total) %> <%= order_form.object.display_total %></td>
+          <td class="lead" align="right"><%= Spree.t(:total) %>:&nbsp;&nbsp;&nbsp;<%= order_form.object.display_total %></td>
         </tr>
       </tbody>
     </table>
