--- a/app/assets/javascripts/spree/backend/admin.js.erb
+++ b/app/assets/javascripts/spree/backend/admin.js.erb
@@ -22,7 +22,7 @@ jQuery(function($) {
      # like states_spec and shipping_methods_spec. Let's not do this. %>
   <% unless Rails.env.test? %>
     $(".flexnav").flexNav({
-      'calcItemWidths':   true,
+      'calcItemWidths':   true
     });
   <% end %>
 
