--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -1,4 +1,22 @@
 <% cache [current_currency, @product] do %>
+  <div id="product-brand" class="row">
+    <div class="col-lg-1 col-sm-2 col-xs-3">
+      <img class="img-responsive center-block" src="http://placehold.it/100x100">
+    </div>
+    <div class="col-lg-11 col-sm-10 col-xs-9">
+      <div class="row">
+        <div class="col-sm-9 col-xs-12">
+          <h3>Sellers Brand or Company Name</h3>
+        </div>
+        <div class="col-sm-3 col-xs-12">
+          <a href="#" class="btn btn-favorite">
+            Favorite
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div data-hook="product_show" itemscope itemtype="http://schema.org/Product">
     <% @body_id = 'product-details' %>
     <div class="row" id="product-info-page">
