--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -344,6 +344,10 @@ footer {
 		padding: 20px 0;
 		background: darken(@body-bg, 5%);
 		border-top: 1px solid #C5C5C5;
+		
+		.container {
+			padding-top: 0px !important;
+		}
 	}
 
 	.bottom {
