updating logo font

--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -183,7 +183,7 @@ input[type="radio"], input[type="checkbox"]{
 
 .logo {
 	color: @navbar-default-brand-color !important;
-	font-family: @font-family-serif;
+	font-family: @logo-font;
 }
 
 /*.logo:hover {
