--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -56,7 +56,7 @@
 		<div class="row">
 			<div class="col-xs-12 text-center">
 				<h2>Exceptional Creations</h2>
-				<p>Semiotics messenger bag bespoke, Williamsburg gluten-free Etsy hashtag pork belly pop-up salvia umami post-ironic letterpress. Four dollar toast raw denim mlkshk Intelligentsia lomo before they sold out small batch. Locavore Thundercats cliche deep v put a bird on it raw denim. Fixie listicle Williamsburg lomo mustache, Banksy Thundercats 3 wolf moon hella Neutra disrupt cronut. Kogi mixtape McSweeney's, Pitchfork tote bag authentic meditation wayfarers street art fingerstache typewriter Thundercats polaroid chillwave wolf. Pinterest small batch plaid, polaroid scenester Echo Park letterpress art party yr cronut asymmetrical banh mi pork belly. Farm-to-table freegan polaroid messenger bag American Apparel.</p>
+				<p>Every product that is sold on Leema is created with passion from the heart and soul of its’ creator. We built Leema to build a community of people who have a passion for creating exceptional products as well as enable them to share their creations with the entire country. We believe in passion and perfection which is why every product sold on Leema is nothing short of exceptional.</p>
 			</div>
 		</div><!-- close .row -->
 	</div><!-- close .container -->
@@ -69,12 +69,12 @@
 			<div class="col-sm-4">
 				<i class="fa fa-recycle"></i>
 				<h4>Your Own Store</h4>
-				<p>Ever dream about having your own store? Now you've got one! Leema gives you the ability to build a fully customizable online storefront that will allow you to promote your brand. With just a few clicks, your store will be open for business!</p>
+				<p>Ever dream about having your own store? Now you’ve got one! Leema gives you a fully customizable online storefront that will allow you to promote your brand. With just a few clicks, your store will be open for business!</p>
 			</div>
 			<div class="col-sm-4">
 				<i class="fa fa-cutlery"></i>
 				<h4>Out of the Box</h4>
-				<p>Leema gives you a robust marketing, ecommerce, and selling platform. Get back to what you really love to do, let us take care of the rest. Don't you wish everything was this simple?</p>
+				<p>Leema gives you a robust selling, payment processing, and marketing platform for free! When your item sells, we collect a 10% fee on the sale price. Get back to what you love to do, let us take care of the rest. Don’t you wish everything was this simple?</p>
 			</div>
 			<div class="col-sm-4">
 				<i class="fa fa-heart"></i>
@@ -86,17 +86,17 @@
 			<div class="col-sm-4">
 				<i class="fa fa-truck"></i>
 				<h4>Delivery</h4>
-				<p>Whether you're 2 miles or 200 miles away, our network of local and national delivery services will ensure that you will always receive your product fresh and undamaged. By partnering with Postmates and EasyPost you can be sure that your order will be cared for as if it were their own child.</p>
+				<p>Whether you’re 2 miles or 200 miles away, our network of local and national delivery services will ensure that you will always receive your product fresh and undamaged. It’s as if your package is their own child.</p>
 			</div>
 			<div class="col-sm-4">
 				<i class="fa fa-users"></i>
 				<h4>Join the Community</h4>
-				<p>From watching the big game around a plate of wings to discussing your day at the dinner table, communities have always formed around food. Leema's community revolves around the creations that are bought and sold, allowing creators to share stories, recipes, secrets, and ideas. This is a community that truly sees food for what it is, an expression of the person who created it.</p>
+				<p>Leema’s community revolves around the creations that are bought and sold, allowing makers to share stories, recipes, secrets, and ideas. This is a community that truly sees food for what it is, an expression of the person who created it.</p>
 			</div>
 			<div class="col-sm-4">
 				<i class="fa fa-shield"></i>
 				<h4>Secure Checkout</h4>
-				<p>Using (some payment) to process all transactions, we give you the peace of mind of knowing that your information is safe every time you make a purchase or sell a product. Whether you use a credit card, debit card, check, doubloons, sheckles, or shillings, your information is safe and secure.</p>
+				<p>Using Stripe to process all transactions, we give you the peace of mind that your information is safe every time you make a purchase or sell a product. Whether paying by credit card, debit card, check, doubloons, sheckles, or shillings, your information is safe and secure.</p>
 				<p>
 			</div>
 		</div>
