adding parallax section covers to profile pages

--- a/app/assets/stylesheets/profiles/profiles.css.scss
+++ b/app/assets/stylesheets/profiles/profiles.css.scss
@@ -2,3 +2,92 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+/* Profile Page Section Covers */
+.section-cover{
+	position: relative;
+	overflow: hidden;
+	background: #000;
+/* 	.picture-gradient {
+		content:"";
+		position: absolute;
+		top:50%;
+		right:0;
+		bottom:0;
+		left:0;
+		background: -moz-linear-gradient(top,  rgba(150,150,150,0) 28%, rgba(150,150,150,0.22) 52%, rgba(124,124,124,0.45) 78%, rgba(73,73,73,0.65) 100%);
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(28%,rgba(150,150,150,0)), color-stop(52%,rgba(150,150,150,0.22)), color-stop(78%,rgba(124,124,124,0.45)), color-stop(100%,rgba(73,73,73,0.65)));
+		background: -webkit-linear-gradient(top,  rgba(150,150,150,0) 28%,rgba(150,150,150,0.22) 52%,rgba(124,124,124,0.45) 78%,rgba(73,73,73,0.65) 100%);
+		background: -o-linear-gradient(top,  rgba(150,150,150,0) 28%,rgba(150,150,150,0.22) 52%,rgba(124,124,124,0.45) 78%,rgba(73,73,73,0.65) 100%);
+		background: -ms-linear-gradient(top,  rgba(150,150,150,0) 28%,rgba(150,150,150,0.22) 52%,rgba(124,124,124,0.45) 78%,rgba(73,73,73,0.65) 100%);
+		background: linear-gradient(to bottom,  rgba(150,150,150,0) 28%,rgba(150,150,150,0.22) 52%,rgba(124,124,124,0.45) 78%,rgba(73,73,73,0.65) 100%);
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00969696', endColorstr='#a6494949',GradientType=0 );
+	} */
+}
+
+.section-cover .section-cover-image {
+	width: 100%;
+	display: block;
+}
+
+.section-cover h1 {
+	position: absolute;
+	left: 5%;
+	bottom: 5%;
+	padding: 0px;
+	color: #fff;
+	background: #000;
+	font-size: 45px;
+	padding: 15px;
+}
+
+
+.edit-profile {
+	float: right;
+	margin-bottom: 15px;
+}
+
+.profile-image {
+
+		img {
+			width: 175px;
+			height: 175px;
+		}
+
+		.img-thumbnail {
+			background-color: #3a89ff;
+			padding: 2px;
+		}
+}
+
+
+@media (max-width: 767px) {
+	.section-cover h1 {
+		font-size: 36px;
+		bottom: 0px;
+		left: 0px;
+	}
+
+	#profile-about {
+		padding-top: 15px;
+	}
+
+	.profile-image {
+			margin-top: 0px;
+
+				img {
+					width: 175px;
+					height: 175px;
+				}
+
+				.img-thumbnail {
+					background-color: #3a89ff;
+					padding: 2px;
+				}
+		}
+
+	.edit-profile {
+		float: none;
+		margin-bottom: 15px;
+	}
+
+}
