--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,18 +1,22 @@
 <body>
   <div class="section-cover">
-    <% if @user.cover_photo_file_name? %>
-      <%= image_tag @user.cover_photo.url(:large), class: "section-cover-image img-responsive" %>
-    <% else %>
+
       <img class="section-cover-image img-responsive" src="http://placehold.it/2000x580">
-    <% end %>
+
+    <h1>Your Store's Name</h1>
   </div>
   <div class="container">
+    <% if @user == current_user %>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="edit-profile">
+            <%= link_to "Edit Profile", edit_path(@user), class: 'btn btn-primary' %>
+          </div>
+        </div><!-- close .col-xs-12 -->
+      </div><!-- close .row -->
+    <% end %>
+
     <div class="row">
-      <div class="edit-profile">
-        <% if @user == current_user %>
-        <%= link_to "Edit Profile", edit_path(@user), class: 'btn btn-primary' %>
-        <% end %>
-      </div>
       <div class="col-sm-4">
         <div class="profile-image">
           <%= image_tag @user.gravatar_url, class: 'img-thumbnail img-responsive' %>
@@ -21,9 +25,10 @@
         <p class="text-muted"><i class="fa fa-map-marker"></i>  <%= @user.city %>, <%= @user.state %></p>
         <p class="text-muted"><i class="fa fa-clock-o"></i> Joined <%= @user.created_at.strftime('%B %Y') %></p>
         <p class="text-muted"><%= @user.products.count %> Products Listed</p>
+        <a href="#" class="btn btn-favorite"> Favorite</a>
       </div>
 
-      <div class="col-sm-8">
+      <div id="profile-about" class="col-sm-8">
         <div class="about-user"><p class="lead"><%= @user.about %></p></div>
       </div>
 
